[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New_game_b" type="Button" parent="."]
margin_left = 128.0
margin_top = 256.0
margin_right = 320.0
margin_bottom = 280.0
text = "new game"
flat = true

[node name="Sett_b" type="Button" parent="."]
margin_left = 128.0
margin_top = 296.0
margin_right = 320.0
margin_bottom = 320.0
text = "setting"
flat = true

[node name="gen" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Bg" type="Panel" parent="gen"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Go_b" type="Button" parent="gen"]
margin_left = 256.0
margin_top = 56.0
margin_right = 384.0
margin_bottom = 80.0
text = "Go"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seed_line" type="LineEdit" parent="gen"]
margin_left = 56.0
margin_top = 56.0
margin_right = 248.0
margin_bottom = 80.0
align = 1
placeholder_text = "seed"

[node name="Go_beak_b" type="Button" parent="gen"]
margin_left = 16.0
margin_top = 536.0
margin_right = 136.0
margin_bottom = 584.0
text = "go beak"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host_b" type="Button" parent="gen"]
margin_left = 256.0
margin_top = 272.0
margin_right = 448.0
margin_bottom = 304.0
text = "HOST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="get_ip" type="Button" parent="gen"]
margin_left = 576.0
margin_top = 288.0
margin_right = 768.0
margin_bottom = 320.0
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="get_ip_line" type="LineEdit" parent="gen"]
margin_left = 576.0
margin_top = 256.0
margin_right = 768.0
margin_bottom = 288.0
align = 1
placeholder_text = "HOST`S IP"

[node name="sett" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Bg" type="Panel" parent="sett"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="sett"]
margin_left = 488.0
margin_top = 144.0
margin_right = 528.0
margin_bottom = 158.0
text = "emply"

[node name="Go_beak_b" type="Button" parent="sett"]
margin_left = 16.0
margin_top = 536.0
margin_right = 136.0
margin_bottom = 584.0
text = "go beak"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="New_game_b" to="." method="_on_New_game_b_pressed"]
[connection signal="pressed" from="Sett_b" to="." method="_on_Sett_b_pressed"]
[connection signal="pressed" from="gen/Go_b" to="." method="_on_Go_b_pressed"]
[connection signal="pressed" from="gen/Go_beak_b" to="." method="_on_Go_beak_b_pressed"]
[connection signal="pressed" from="gen/Host_b" to="." method="_on_Host"]
[connection signal="pressed" from="gen/get_ip" to="." method="_on_Join_"]
[connection signal="pressed" from="sett/Go_beak_b" to="." method="_on_Go_beak_b_pressed_sett"]
